# bookofshadows

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  NOTICE.md  README.md  SECURITY.md  TRANSFORMATION_PLAN.md  __init__.py  config.py  dashboard_core.py  package-lock.json  package.json  plugin.yaml  pyproject.toml  server.py  vitest.config.js
.github/workflows/: ci.yml
docs/: ACCESSIBILITY.md  ARCHITECTURE.md  DEMO_DATA.md  FRONTEND_TESTING.md  NEXT_AGENT_HANDOFF.md  PHASE_0_BASELINE.md  RELEASE_CHECKLIST.md  SETUP.md
docs/screenshots/: manifest.json
scripts/: check_frontend_bundle.mjs  frontend_smoke.py  generate_mock_screenshots.py  install_launchd_macos.sh  mock_data.py
static/: app.js  brand-fonts.css  index.html  style.css
static/src/: app-main.js  app.js
static/src/api/: client.js  endpoints.js
static/src/features/: charts.js  detail-drawer.js  graph.js  memories.js  review-controller.js  review.js  settings-controller.js
static/src/state/: routing.js
static/src/ui/: dom.js  feedback.js  render.js
static/src/utils/: a11y.js  charts.js  escape.js  format.js
static/src/visualisers/: chrome.js  constellation.js  memory-palace.js  three-visualiser.js
tests/: test_dashboard_core.py  test_plugin_runtime.py  test_server.py
tests/frontend/: a11y.test.js  api-client.test.js  charts.test.js  dom.test.js  feedback.test.js  graph.test.js  memories.test.js  motion.test.js  render.test.js  review.test.js  routing.test.js  utils.test.js
